{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 31,
  "lineage": "93728c33-344c-62e8-4e41-b76c91fd9d3f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-077f1edd46ddb3129",
            "arn": "arn:aws:ec2:us-east-1:964791839127:instance/i-0a8481beaf9d59350",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a8481beaf9d59350",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "chilakakey1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0de23c460782f839b",
            "private_dns": "ip-10-1-20-59.ec2.internal",
            "private_ip": "10.1.20.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e8d6e0a5a1b1402d",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e8934d12c44df2b",
            "tags": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "Ingestion1-prod",
              "Owner": "Aravind"
            },
            "tags_all": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "Ingestion1-prod",
              "Owner": "Aravind"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cc60711becde2135"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.subnet-private",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964791839127:internet-gateway/igw-092d4638608bd3474",
            "id": "igw-092d4638608bd3474",
            "owner_id": "964791839127",
            "tags": {
              "Name": "terraform-aws-igw-Mercury"
            },
            "tags_all": {
              "Name": "terraform-aws-igw-Mercury"
            },
            "vpc_id": "vpc-00a50e5e298575975"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964791839127:route-table/rtb-063d4f28310d89a7e",
            "id": "rtb-063d4f28310d89a7e",
            "owner_id": "964791839127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-092d4638608bd3474",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-Mercury"
            },
            "tags_all": {
              "Name": "Terraform_Main_table-Mercury"
            },
            "vpc_id": "vpc-00a50e5e298575975"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccf0cc3f9c901b3e",
            "route_table_id": "rtb-063d4f28310d89a7e",
            "subnet_id": "subnet-02e8934d12c44df2b"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-private",
            "aws_subnet.subnet-private",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964791839127:security-group/sg-0cc60711becde2135",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc60711becde2135",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.30.110.0/24"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "Mercury-allow-custom-ports",
            "name_prefix": "",
            "owner_id": "964791839127",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00a50e5e298575975"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964791839127:subnet/subnet-02e8934d12c44df2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.20.0/24",
            "id": "subnet-02e8934d12c44df2b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "964791839127",
            "tags": {
              "Name": "Terraform_Private_Subnet-Mercury"
            },
            "tags_all": {
              "Name": "Terraform_Private_Subnet-Mercury"
            },
            "vpc_id": "vpc-00a50e5e298575975"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964791839127:vpc/vpc-00a50e5e298575975",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0859e5ad8ba2db98a",
            "default_route_table_id": "rtb-0d5d2c6b309e1696e",
            "default_security_group_id": "sg-043d49812983b8fd9",
            "dhcp_options_id": "dopt-9093aeea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00a50e5e298575975",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d5d2c6b309e1696e",
            "owner_id": "964791839127",
            "tags": {
              "Name": "terraform-aws-Mercury",
              "Owner": "Aravind",
              "environment": "prod"
            },
            "tags_all": {
              "Name": "terraform-aws-Mercury",
              "Owner": "Aravind",
              "environment": "prod"
            }
          }
        }
      ]
    }
  ]
}